--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Fake Store</title>
+    <script src="//code.iconify.design/1/1.0.6/iconify.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
